# SimpleRISCMachine

./: .gitignore  CMakeLists.txt  README.md
src/: LRUCache.cpp  LRUCache.h  cpu.cpp  cpu.h  instr_set.h  main.cpp  memory.cpp  memory.h  memory_unit_test.cpp
test_gtest/: test_system.cpp
test_prgms/: test_cache.txt  test_cmp_val.txt  test_count_digits.txt  test_factorial.txt  test_fibonacci.txt  test_left_shift.txt  test_load_store.txt  test_log_and.txt  test_log_or.txt  test_log_xor_not.txt  test_right_shift.txt  test_sum_sub.txt
